More fixes and temporary debug